home page link added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               </li>
               <li>
                 <div id="navItems">
-                  <a href="#">Home</a>
+                  <a href="/Ep-26/sapnendra-portfolio-io-main/index.html">Home</a>
                   <a href="#">About</a>
                   <a href="#">Contact</a>
                 </div>
